[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.9.4"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]} # TODO: this allows us to use another solana program. How do I enable no-entrypoint in my program?
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]
